[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/skins/basic/thumbnail.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/skins/basic/player.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/ui/menu/buttons/button_back.png" type="Texture" id=3]
[ext_resource path="res://scenes/ui/menu/CollectionScreen.gd" type="Script" id=4]
[ext_resource path="res://assets/sprites/skins/equip/monocle.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/background/PinkBackground.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/ui/menu/buttons/arrow.png" type="Texture" id=7]

[node name="CollectionScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="VBoxContainer" parent="MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 795.0
margin_bottom = 445.0

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/Content"]
margin_right = 790.0
margin_bottom = 61.0
size_flags_vertical = 3
alignment = 1

[node name="BackButton" type="TextureButton" parent="MarginContainer/Content/Buttons"]
margin_left = 262.0
margin_right = 527.0
margin_bottom = 61.0
texture_normal = ExtResource( 3 )

[node name="EquipSelection" type="HBoxContainer" parent="MarginContainer/Content"]
margin_top = 65.0
margin_right = 790.0
margin_bottom = 371.0
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0

[node name="LeftControls" type="VBoxContainer" parent="MarginContainer/Content/EquipSelection"]
margin_right = 156.0
margin_bottom = 306.0
size_flags_horizontal = 3
alignment = 1

[node name="PreviousBackground" type="TextureButton" parent="MarginContainer/Content/EquipSelection/LeftControls"]
margin_top = 153.0
margin_right = 156.0
margin_bottom = 153.0
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 3

[node name="Preview" type="VBoxContainer" parent="MarginContainer/Content/EquipSelection"]
margin_left = 160.0
margin_right = 629.0
margin_bottom = 306.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="Background" type="TextureRect" parent="MarginContainer/Content/EquipSelection/Preview"]
margin_right = 469.0
margin_bottom = 306.0
size_flags_vertical = 3
texture = ExtResource( 6 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Base" type="TextureRect" parent="MarginContainer/Content/EquipSelection/Preview/Background"]
margin_top = 4.0
margin_right = 469.0
margin_bottom = 306.0
size_flags_vertical = 3
texture = ExtResource( 2 )
stretch_mode = 4

[node name="HeadOverlay" type="TextureRect" parent="MarginContainer/Content/EquipSelection/Preview/Background/Base"]
visible = false
anchor_right = 1.0
margin_left = 251.784
margin_top = 50.3382
margin_right = -153.216
margin_bottom = 114.338
texture = ExtResource( 5 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BodyOverlay" type="TextureRect" parent="MarginContainer/Content/EquipSelection/Preview/Background/Base"]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -32.0
margin_bottom = 32.0
texture = ExtResource( 1 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LegsOverlay" type="TextureRect" parent="MarginContainer/Content/EquipSelection/Preview/Background/Base"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -64.0
texture = ExtResource( 1 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightControls" type="VBoxContainer" parent="MarginContainer/Content/EquipSelection"]
margin_left = 633.0
margin_right = 790.0
margin_bottom = 306.0
size_flags_horizontal = 3
alignment = 1

[node name="Control" type="Control" parent="MarginContainer/Content/EquipSelection/RightControls"]
margin_top = 153.0
margin_right = 157.0
margin_bottom = 153.0

[node name="NextBackground2" type="TextureButton" parent="MarginContainer/Content/EquipSelection/RightControls/Control"]
margin_right = 157.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 78, 0 )
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkinSelection" type="HBoxContainer" parent="MarginContainer/Content"]
margin_top = 375.0
margin_right = 790.0
margin_bottom = 439.0
alignment = 1

[node name="TextureButton" type="TextureButton" parent="MarginContainer/Content/SkinSelection"]
margin_left = 363.0
margin_right = 427.0
margin_bottom = 64.0
texture_normal = ExtResource( 1 )
[connection signal="pressed" from="MarginContainer/Content/Buttons/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="MarginContainer/Content/EquipSelection/LeftControls/PreviousBackground" to="." method="_on_PreviousBackground_pressed"]
[connection signal="pressed" from="MarginContainer/Content/EquipSelection/RightControls/Control/NextBackground2" to="." method="_on_NextBackground2_pressed"]
