extends Control

const background = []

func _on_BackButton_pressed() -> void:
    get_tree().change_scene("res://scenes/ui/menu/TitleScreen.tscn")


func _on_PreviousBackground_pressed() -> void:
    pass # Replace with function body.


func _on_NextBackground2_pressed() -> void:
    pass # Replace with function body.
